Fix Katex display overflow

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -594,8 +594,10 @@ a.reversefootnote {
 
 /*
   MathJax ================================== */
-.MathJax_Display, .MJXc-display, .MathJax_SVG_Display{
+.MathJax_Display, .MJXc-display, .MathJax_SVG_Display .katex-display{
   overflow-x: auto;
   overflow-y: hidden;
 }
+
+
   
